--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <script src="sasta-ui.js" defer></script>
     <script src="sasta-app.js" defer></script>
 </head>
+
 <body>
     <header>
         <nav>
@@ -17,7 +19,7 @@
             </div>
             <div class="playlist-box">
                 <button id="playlistBtn">
-                   <img src="src/img/playlist.svg" alt=""> Playlist
+                    <img src="src/img/playlist.svg" alt=""> Playlist
                 </button>
             </div>
         </nav>
@@ -70,8 +72,14 @@
             </div>
         </div>
     </main>
+    <div class="hidden-player">
+        <audio controls autoplay loop>
+            <source src="src/audio/Despacito - Indian Classical Version (feat. Praveen Prathapan & Janan Sathiendran) .mp3">
+        </audio>
+    </div>
     <footer>
         Content Protected with Copyright: <a href="https://github.com/tcabrij/" target="_blank">More Info</a>
     </footer>
 </body>
+
 </html>
