add playlist ui

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
                     </div>
                     <div class="audio-controls">
                         <div class="btn-wrapper">
-                            <span class="control-btn">
+                            <span class="control-btn previous-btn">
                                 <img src="src/img/previous-btn.svg" class="svg-btn">
                             </span>
-                            <span class="control-btn play-btn">
+                            <span class="control-btn play-btn paused" >
                                 <img src="src/img/play-btn.svg" class="svg-btn">
                             </span>
-                            <span class="control-btn">
+                            <span class="control-btn next-btn">
                                 <img src="src/img/next-btn.svg" class="svg-btn">
                             </span>
                         </div>
@@ -63,8 +63,7 @@
                             <option value="0.75">0.75</option>
                             <option class="active" value="1">Normal</option>
                             <option value="1.25">1.25</option>
-                            <option value="1.50">1.5</option>
-                            <option value="1.75">1.75</option>
+                                        <option value="1.75">1.75</option>
                             <option value="2">2</option>
                         </select> -->
                     </div>
@@ -73,10 +72,31 @@
         </div>
     </main>
     <div class="hidden-player">
-        <audio controls autoplay loop>
+        <audio controls loop>
             <source src="src/audio/Despacito - Indian Classical Version (feat. Praveen Prathapan & Janan Sathiendran) .mp3">
         </audio>
     </div>
+    <!-- <div class="modal-window">
+        <div class="container modal-pop">
+            <section class="search-section">
+                <input type="text" class="search-field" autofocus placeholder="Search">
+            </section>
+            <section class="music-list-section">
+                <div class="track">
+                    <h3 class="title">Alan walker - Sing me to sleep</h3>
+                    <p class="artist">Artist: Alan Walker</p>
+                </div>
+                <div class="track">
+                    <h3 class="title">Alan walker - Sing me to sleep</h3>
+                    <p class="artist">Artist: Alan Walker</p>
+                </div>
+                <div class="track">
+                    <h3 class="title">Alan walker - Sing me to sleep</h3>
+                    <p class="artist">Artist: Alan Walker</p>
+                </div>
+            </section>
+        </div>
+    </div> -->
     <footer>
         Content Protected with Copyright: <a href="https://github.com/tcabrij/" target="_blank">More Info</a>
     </footer>
