--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
     </main>
     <div class="hidden-player">
-        <audio controls loop>
+        <audio controls loop data-paused="true">
             <source src="src/audio/Despacito - Indian Classical Version (feat. Praveen Prathapan & Janan Sathiendran) .mp3">
         </audio>
     </div>
