--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <span class="control-btn previous-btn">
                                 <img src="src/img/previous-btn.svg" class="svg-btn">
                             </span>
-                            <span class="control-btn play-btn paused" >
+                            <span class="control-btn play-btn paused padding-3" >
                                 <img src="src/img/play-btn.svg" class="svg-btn">
                             </span>
                             <span class="control-btn next-btn">
