add github source code button

--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@
         </div>
     </div> -->
     <footer>
-        Content Protected with Copyright: <a href="https://github.com/tcabrij/" target="_blank">More Info</a>
+         <a href="https://github.com/tcabrij/music-player" target="_blank">
+            <img src="src/img/github-logo.png" alt="Source on GitHub"> <span>Source Code</span>
+         </a>
     </footer>
 </body>
 
