--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <h2>Now Playing</h2>
             </div>
             <div class="track-image">
-                <img src="src/img/logo.png" alt="">
+                <img src="src/img/logo.webp" alt="">
             </div>
             <div class="controls">
                 <div class="track-info">
