--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                             <span class="control-btn previous-btn">
                                 <img src="src/img/previous-btn.svg" class="svg-btn">
                             </span>
-                            <span class="control-btn play-btn paused padding-3" >
-                                <img src="src/img/play-btn.svg" class="svg-btn">
+                            <span class="control-btn play-btn paused" >
+                                <img src="src/img/play-btn.svg" class="svg-btn padding-3">
                             </span>
                             <span class="control-btn next-btn">
                                 <img src="src/img/next-btn.svg" class="svg-btn">
