--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
                     </div>
                     <div class="audio-controls">
                         <div class="btn-wrapper">
+                            <div class="speed-controller">
+                                <select id="speed">
+                                    <option value="1" style="visibility: hidden;">1x</option>
+                                    <option value="0.25">.25x</option>
+                                    <option value="0.5">.5x</option>
+                                    <option value="0.75">.75x</option>
+                                    <option class="active" value="1">1x</option>
+                                    <option value="1.25">1.25x</option>
+                                    <option value="1.75">1.75x</option>
+                                    <option value="2">2x</option>
+                                </select>
+                            </div>
                             <span class="control-btn previous-btn" title="Previous">
                                 <img src="src/img/previous-btn.svg" class="svg-btn">
                             </span>
@@ -64,15 +76,6 @@
                                 </div>
                             </span>
                         </div>
-                        <!-- <select id="speed">
-                            <option value="0.25">0.25</option>
-                            <option value="0.5">0.5</option>
-                            <option value="0.75">0.75</option>
-                            <option class="active" value="1">Normal</option>
-                            <option value="1.25">1.25</option>
-                                        <option value="1.75">1.75</option>
-                            <option value="2">2</option>
-                        </select> -->
                     </div>
                 </div>
             </div>
